fix dark mode styles

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
@@ -5,12 +9,6 @@ body {
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
-  color: blue;
-}
-
-a:hover {
   text-decoration: underline;
 }
 
